# manual-serializer

./: Cargo.toml  README.md
src/: error.rs  lib.rs  serializer.rs
