[package]
name = "manual-serializer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/manual-serializerw"
keywords = ["serialize", "deserialize", "stream", "encoding"]
categories = ["encoding"]
description = """
Utilities for simple manual byte stream serialization & deserialization
"""

[dependencies]
thiserror = "1.0.37"
